--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,3 +22,20 @@ body {
   padding: 0;
   min-height: 100vh;
 }
+
+/* input radio with an image right after it, aka the image radio options */
+input[type="radio"]:has(+ img) {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+input[type="radio"] + img {
+  cursor: pointer;
+  outline: none;
+}
+
+input[type="radio"]:checked + img {
+  outline: 3px solid #38bdf8;
+}
