Added logo to the navbar on chat page.

--- a/src/app/chat/navbar.css
+++ b/src/app/chat/navbar.css
@@ -6,10 +6,15 @@
     z-index: 10001;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+    padding-left: 1rem;
 }
 
 .navbar-sticky {
     position: fixed;
     top: 0;
     left: 0;
+}
+
+.logo {
+    cursor: pointer;
 }
